--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -48,7 +48,7 @@ jobs:
         uses: docker/build-push-action@v4.1.1
         with:
           context: ${{ matrix.image }}
-          file: ./Dockerfile
+          file: ${{ matrix.image }}/Dockerfile
           platforms: ${{ matrix.platforms }}
           push: true
           tags: ${{ steps.docker_meta.outputs.tags }}
