--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,6 +14,8 @@ jobs:
         include:
           - image: hummingbot-postgres
             platforms: "linux/amd64,linux/arm64"
+          - image: rust-script
+            platforms: "linux/arm64"
     steps:
       - uses: actions/checkout@v3.5.3
       - name: Set up QEMU
