--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,7 +15,7 @@ jobs:
           - image: hummingbot-postgres
             platforms: "linux/amd64,linux/arm64"
           - image: rust-script
-            platforms: "linux/arm64"
+            platforms: "linux/amd64,linux/arm64"
     steps:
       - uses: actions/checkout@v3.5.3
       - name: Set up QEMU
