--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -49,6 +49,8 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v4.1.1
         with:
+          driver-opts: |
+              image=moby/buildkit:v0.12.0
           context: ${{ matrix.image }}
           file: ${{ matrix.image }}/Dockerfile
           platforms: ${{ matrix.platforms }}
