--- a/hummingbot-postgres/Dockerfile
+++ b/hummingbot-postgres/Dockerfile
@@ -1,2 +1,2 @@
-FROM hummingbot/hummingbot:version-1.17.0
+FROM docker.io/hummingbot/hummingbot:version-1.24.0
 RUN conda install --name hummingbot psycopg2
